# langgraph-groupchat-py

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
examples/customer_support/: customer_support.ipynb
src/langgraph_groupchat/: __init__.py  candidate.py  groupchat.py  selector.py
tests/: test_groupchat.py  test_integration.py  test_selector.py
